--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -5,6 +5,10 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-rows: 100px 50px 900px 50px;
+  grid-template-columns: 1fr 4fr ;
+  gap: 4px;
 }
 
 .container div {
@@ -17,15 +21,33 @@
 
 .header {
   background-color: #393f4d;
+  grid-area: 1 / 1 / 2 / 3;
+  display: grid;
+  grid-template-columns: 1fr 2fr ;
 }
 
 .menu ul,
 .menu li {
   font-size: 16px;
+
+}
+
+.menu ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.menu li {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
 }
 
 .sidebar {
+  grid-area: 2 / 1 / 4 / 2;
   background-color: #C50208;
+  gap: 50px;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
 }
 
 .sidebar .photo {
@@ -34,6 +56,8 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+  display: grid;
+  align-items: center;
 }
 
 
@@ -42,19 +66,34 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+  display: grid;
+  align-items: center;
 }
 
 .nav {
   background-color: #C50208;
+  grid-area: 2 / 2 / 3 / 3;
+
+}
+
+.nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
+  list-style-type: none;
+  
 }
 
 .article {
   background-color: #bccbde;
+  grid-area: 3 / 2 / 4 / 3;
+  display: grid;
+  grid-template: repeat(auto-fit, minmax(250px,1fr))/ repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
 }
 
 .article p {
@@ -68,6 +107,9 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  height: 200px;
+  display: grid;
+  grid-template-rows: 1fr 3fr;
 }
 
 .card p {
@@ -83,6 +125,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-area: 4 / 1 / 5 / 3;
 }
 
 .footer p {
